# KeyLock

./: .gitignore  .nixpacks.toml  Cargo.toml  README.md  nixpacks.toml
.github/workflows/: backend.yml  frontend.yml
backend/: Cargo.toml  diesel.toml  nixpacks.toml
backend/.cargo/: config.toml
backend/migrations/2025-08-11-134727_create_secrets/: down.sql  up.sql
backend/src/: config.rs  error.rs  main.rs  utils.rs
backend/src/crypto/: aes_gcm.rs  mod.rs
backend/src/db/: cleanup.rs  mod.rs  models.rs  schema.rs
backend/src/routes/: mod.rs  retrieve.rs  share.rs
docker/: Dockerfile.backend  docker-compose.yml
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: Hero.tsx  ShareLinkModal.tsx  customcursor.tsx  footer.tsx  howitworks.tsx  navbar.tsx
frontend/app/secret/[id]/: page.tsx
frontend/app/upload/: page.tsx
scripts/: dev.sh  setup.sh
