[package]
name = "keylock-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
diesel = { version = "2.2.12", features = ["sqlite", "chrono"] }
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
aes-gcm = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9.2"
base64 = "0.22.1"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15.7"
thiserror = "2.0.12"
tokio-cron-scheduler =  "0.14.0"
